manifests/external-names/betterplayer-canary-join-redirect.yaml
apiVersion: v1
kind: Service
metadata:
  name: betterplayer-canary-join-redirect
  namespace: external-names
spec:
  type: ExternalName
  externalName: google.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: betterplayer-canary-join-redirect
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: 'letsencrypt-betterplayer'
    nginx.ingress.kubernetes.io/permanent-redirect-code: '302'
    nginx.ingress.kubernetes.io/permanent-redirect: "https://discord.com/api/oauth2/authorize?client_id=886971603995488296&permissions=36817984&scope=bot"
spec:
  tls:
  - hosts:
    - canary.betterplayer.net
    secretName: canary-betterplayer-net
  rules:
  - host: canary.betterplayer.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: betterplayer-canary-join-redirect
            port:
              number: 443
