manifests/external-names/computer-bestel-nl.yaml
apiVersion: v1
kind: Service
metadata:
  name: computer-bestel-nl
  namespace: external-names
spec:
  type: ExternalName
  externalName: computer-bestel-nl.intern.array21.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: computer-bestel-nl
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:
  tls:
  - hosts:
    - computer-bestel-nl.k8s.array21.dev
    secretName: computer-bestel-nl-k8s-array21-dev
  rules:
  - host: computer-bestel-nl.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: computer-bestel-nl
            port:
              number: 443
