manifests/external-names/deb-repository.yaml
apiVersion: v1
kind: Service
metadata:
  name: deb-repository
  namespace: external-names
spec:
  type: ExternalName
  externalName: 10.10.4.6
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deb-repository
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:  
  tls:
  - hosts:
    - deb.k8s.array21.dev
    secretName: deb-k8s-array21-dev

  rules:
  - host: deb.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deb-repository
            port:
              number: 9081
