manifests/external-names/deskled.yaml
apiVersion: v1
kind: Service
metadata:
  name: deskled
  namespace: external-names
spec:
  type: ExternalName
  externalName: 10.10.4.98
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deb-repository
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:
  tls:
  - hosts:
    - deskled.k8s.array21.dev
    secretName: deskled-k8s-array21-dev

  rules:
  - host: deskled.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deskled
            port:
              number: 8080
