manifests/external-names/dynmap-kermitcraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynmap-kermitcraft
spec:
  type: ExternalName
  externalName: 10.10.4.18
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynmap-kermitcraft
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
spec:
  tls:
  - hosts:
    - dynmap-kermitcraft.k8s.array21.dev
    secretName: dynmap-kermitcraft-k8s-array21-tls
  rules:
  - host: dynmap-kermitcraft.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dynmap-kermitcraft
            port:
              number: 8123
