manifests/external-names/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: external-names
spec:
  type: ExternalName
  externalName: 10.10.4.6
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:  
  tls:
  - hosts:
    - grafana.k8s.array21.dev
    secretName: grafana-k8s-array21-dev

  rules:
  - host: grafana.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
