manifests/external-names/jellyfin.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: external-names
spec:
  type: ExternalName
  externalName: jellyfin.intern.array21.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"    
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
spec:
  tls:
  - hosts:
    - media.array21.nl
    secretName: media-array21-tls
  rules:
  - host: media.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-websocket
  namespace: external-names
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: 'letsencrypt-array21'
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";
spec:
  tls:
  - hosts:
    - media.array21.nl
    secretName: media-array21-tls
  rules:
  - host: media.array21.dev
    http:
      paths:
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
