manifests/external-names/mrfriendly-authlander.yaml
apiVersion: v1
kind: Service
metadata:
  name: authlander
  namespace: mrfriendly
spec:
  type: ExternalName
  externalName: desktop.intern.array21.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crmquery-api
  namespace: mrfriendly
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - authlander.intern.mrfriendly.nl
    secretName: mrfriendly-tls
  rules:
  - host: authlander.intern.mrfriendly.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authlander
            port:
              number: 8080
