manifests/external-names/plaid-oauth.yaml
apiVersion: v1
kind: Service
metadata:
  name: plaid-oauth
spec:
  type: ExternalName
  externalName: 192.168.1.129
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plaid-oauth
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
spec:
  tls:
  - hosts:
    - plaid-oauth.k8s.array21.dev
    secretName: plaid-oauth-k8s-array21-tls
  rules:
  - host: plaid-oauth.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plaid-oauth
            port:
              number: 3000
