manifests/external-names/prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ExternalName
  externalName: prometheus.intern.array21.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
spec:
  tls:
  - hosts:
    - prometheus.k8s.array21.dev
    secretName: prometheus-k8s-array21-tls
  rules:
  - host: prometheus.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 9090
