manifests/external-names/rconsole-kermitcraft.yaml
apiVersion: v1
kind: Service
metadata:
  name: rconsole-kermitcraft
spec:
  type: ExternalName
  externalName: rconsole-kermitcraft.intern.array21.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rconsole-kermitcraft
  annotations:
    kubernets.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - rconsole-kermitcraft.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: rconsole-kermitcraft.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rconsole-kermitcraft
            port:
              number: 8090
