manifests/external-names/unifi.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: ExternalName
  externalName: unifi.intern.array21.dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-array21"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
spec:
  tls:
  - hosts:
    - unifi.k8s.array21.dev
    secretName: unifi-k8s-array21-tls
  rules:
  - host: unifi.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unifi
            port:
              number: 8443
